# chores

./: .cursorrules  .gitignore  Makefile  README.md  chores.py  chores_bot.py  kitchen_agent.py  models.py  pyproject.toml  speech_agent_cli.py  ui.py
.cursor/rules/: read-overview-first.mdc
chores/: __init__.py  chores.py  chores_bot.py  domain.py
core/: __init__.py  audio_announcements.py  people.py
data/: people.toml
discord_bot/: __init__.py  bot.py
display/: __init__.py  diagnostics.py  screen.py
face_samples/: __init__.py  collector.py
kitchen_timer/: __init__.py  service.py
reachy/: __init__.py  companion.py
scripts/: reachy_daemon_launchd.py
specs/: audio.md  chores.md  core.md  discord_bot.md  display.md  kitchen_timer.md  overview.md  reachy.md  speech_agent.md
speech_agent/: __init__.py  audio.py  events.py  live.py  runner.py  tools.py  wake.py
tests/: conftest.py  test_chores_app.py  test_core_people.py  test_diagnostics.py  test_discord_bot.py  test_display_screen.py  test_face_sample_collector.py  test_kitchen_timer.py  test_reachy_companion.py  test_reachy_daemon_launchd.py  test_speech_agent_live.py  test_speech_agent_runner.py  test_speech_agent_tools.py  test_voice_announcements.py
tests/manual/: test_audio.py  test_pyaudio_wake_cycle_stress.py
