[project]
name = "chores"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "discord>=2.3.2",
    "elevenlabs>=1.50.3",
    "google-genai>=2.0.1",
    "openai>=1.58.1",
    "opencv-python>=4.13.0.92",
    "pillow>=11.1.0",
    "pyaudio>=0.2.14",
    "pymicro-wakeword>=2.2.1",
    "pytest>=8.3.4",
    "reachy-mini[mujoco]>=1.7.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "manual: explicit manual tests that may use paid services, hardware, or external integrations",
]
